--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,11 @@
 .active {
     @apply font-bold text-yellow-700;
 }
+
+@layer utilities {
+    input[type="number"]::-webkit-inner-spin-button,
+    input[type="number"]::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+    }
+  }
